fix(sbb-map-container): remove z-index to avoid stacking problems

--- a/src/elements/map-container/map-container.scss
+++ b/src/elements/map-container/map-container.scss
@@ -8,13 +8,13 @@
   --sbb-map-container-map-height-small: #{sbb.px-to-rem-build(320)};
   --sbb-map-container-sidebar-width: #{sbb.px-to-rem-build(400)};
   --sbb-map-container-sidebar-background-color: var(--sbb-color-white);
-  --sbb-map-container-map-height: calc(
-    var(--sbb-map-container-map-height-zero) + var(--sbb-border-radius-4x)
-  );
   --sbb-map-container-border-radius: var(--sbb-border-radius-4x);
   --sbb-map-container-animation-duration: var(
     --sbb-disable-animation-zero-time,
     var(--sbb-animation-duration-4x)
+  );
+  --sbb-map-container-map-height: calc(
+    var(--sbb-map-container-map-height-zero) + var(--sbb-map-container-border-radius)
   );
 
   @include sbb.mq($from: small) {
@@ -33,14 +33,12 @@
 .sbb-map-container {
   display: grid;
   grid-template-rows: auto auto;
-  height: 100%;
 
   @include sbb.mq($from: medium) {
     grid-template-columns: max(var(--sbb-map-container-sidebar-width)) calc(
         100% - var(--sbb-map-container-sidebar-width)
       );
     height: calc(100vh - var(--sbb-map-container-margin-start, var(--sbb-header-height)));
-    overflow: hidden;
   }
 }
 
@@ -81,7 +79,6 @@
   grid-column: 1 / 3;
   grid-row: 2 / 3;
   width: 100%;
-  height: calc(100% + var(--sbb-map-container-border-radius));
   overflow: hidden auto;
   position: relative;
   border-start-end-radius: var(--sbb-map-container-border-radius);
@@ -100,17 +97,19 @@
 
 .sbb-map-container__map {
   position: sticky;
-  z-index: -1;
   inset-block-start: 0;
   inset-inline: 0;
   grid-row: 1 / 2;
   grid-column: 1 / 3;
-  height: var(--sbb-map-container-map-height);
+
+  // We use "to: medium" to avoid resetting the styles
+  @include sbb.mq($to: medium) {
+    height: var(--sbb-map-container-map-height);
+  }
 
   @include sbb.mq($from: medium) {
     grid-row: 1 / 3;
     grid-column: 2 / 3;
-    height: 100%;
     position: relative;
   }
 }
